# weather-api

./: .coveragerc  .dockerignore  .env-example  Dockerfile  LICENSE  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  docker-swarm.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  models.py  routes.py  services.py  validators.py
app/api/: __init__.py  auth.py  history.py  user.py  weather.py
app/docs/: swagger.yml
app/routes/: auth.py  main.py
migrations/versions/: 0bdd24295c2c_.py  92088afba244_initial.py
src/: telemetry.py
src/weather_api/app/: config.py  models.py  services.py
src/weather_api/app/api/: __init__.py  history.py
src/weather_api/migrations/versions/: 4e4bb378dcb9_.py  79eaa578cdd1_initial.py  88c354439d84_.py  a8b3b87b7a3f_.py  c44c7dcf36ba_.py
src/weather_api/tests/: conftest.py  test_history.py  test_user.py  test_weather.py  utils.py
tests/: conftest.py  env_test.py  test_auth.py  test_routes_auth.py  test_routes_main.py  test_routes_weather.py  test_user.py  test_weather.py  utils.py
