[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/weather_api"]

[project]
name = "weather_api"
version = "0.1.0"
description = "Weather data API"
readme = "README.md"
requires-python=">=3.13"
license= {text = "MIT"}

dependencies = [
    "flask>=3.1.2",
    "flask-restx>=1.3.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-migrate>=4.1.0",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.10",
    "redis>=5.0.0",
    "python-dotenv>=1.1.1",
    "gunicorn>=23.0.0",
    "coverage>=7.10.7",
    "pytest>=8.4.2",
    "pytest-flask>=1.3.0",
]